[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "revrseai-python"
version = "0.1.0"
description = "Python RevrseAI client library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "RevrseAI"}]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.32.5",
]

[tool.hatch.build.targets.wheel]
packages = ["revrseai"]

[project.urls]
Homepage = "https://revrse.ai"
Repository = "https://github.com/revrseai/revrseai-python"
Issues = "https://github.com/revrseai/revrseai-python/issues"
