[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "revrseai-python"
version = "0.1.1"
description = "Python RevrseAI client library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "RevrseAI"}]
keywords = ["revrseai", "api", "android", "automation", "sdk", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["revrseai"]

[project.urls]
Homepage = "https://revrse.ai"
Documentation = "https://github.com/revrseai/revrseai-python#readme"
Repository = "https://github.com/revrseai/revrseai-python"
Issues = "https://github.com/revrseai/revrseai-python/issues"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20250913",
]

